force-app/main/default/objects/Financial_Accounts__c/Financial_Accounts__c.object-meta.xml
<CustomObject>
    <description>Object to store Financial Accounts of Customers.</description>
    <label>Financial Account</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>