force-app/main/default/objects/Financial_Accounts__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>