force-app/main/default/objects/Financial_Accounts__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account Number of Customer</description>
    <inlineHelpText>Account Number of Customer</inlineHelpText>
    <label>Account Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>