force-app/main/default/objects/Financial_Accounts__c/fields/Acme_Bank_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Acme_Bank_Unique_ID__c</fullName>
    <description>Acme Bank Unique ID of Financial Accounts</description>
    <externalId>true</externalId>
    <label>Acme Bank Unique ID (ABID)</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>