force-app/main/default/objects/Financial_Accounts__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Customer Address</description>
    <inlineHelpText>Enter Address</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>