force-app/main/default/objects/Financial_Accounts__c/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated Balance Amount of customers</description>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>