force-app/main/default/objects/Financial_Accounts__c/fields/Balance_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Balance_Calculation__c</fullName>
    <label>Balance Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Calculated</fullName>
                <default>true</default>
                <label>Calculated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>