force-app/main/default/objects/Financial_Accounts__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Customer Email address</description>
    <inlineHelpText>Enter Email address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>