force-app/main/default/objects/Financial_Accounts__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account State of Customers</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>