force-app/main/default/objects/Financial_Accounts__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Customer Phone Number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>