force-app/main/default/objects/Financial_Accounts__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Customer Types</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spending</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>