force-app/main/default/objects/Financial_Accounts__c/recordTypes/Individuals.recordType-meta.xml
<RecordType>
    <fullName>Individuals</fullName>
    <active>true</active>
    <description>Financial Account of Individual Customers</description>
    <label>Individuals</label>
</RecordType>