force-app/main/default/objects/Financial_Accounts__c/validationRules/ABIDCannotbeUpdated.validationRule-meta.xml
<ValidationRule>
    <fullName>ABIDCannotbeUpdated</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Acme_Bank_Unique_ID__c) != null &amp;&amp;  ISCHANGED(Acme_Bank_Unique_ID__c)</errorConditionFormula>
    <errorDisplayField>Acme_Bank_Unique_ID__c</errorDisplayField>
    <errorMessage>Custome ABID cannot be Updated.</errorMessage>
</ValidationRule>