force-app/main/default/objects/Financial_Accounts__c/listViews/Active_Accounts.listView-meta.xml
<ListView>
    <fullName>Active_Accounts</fullName>
    <columns>Acme_Bank_Unique_ID__c</columns>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Balance_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Accounts</label>
</ListView>