force-app/main/default/objects/Financial_Accounts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Acme_Bank_Unique_ID__c</columns>
    <columns>Address__c</columns>
    <columns>Balance_Amount__c</columns>
    <columns>Balance_Calculation__c</columns>
    <columns>Email__c</columns>
    <columns>IsActive__c</columns>
    <columns>Phone__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>