force-app/main/default/objects/Financial_Accounts__c/listViews/Inactive_Accounts.listView-meta.xml
<ListView>
    <fullName>Inactive_Accounts</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Balance_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Accounts</label>
</ListView>